Closed Bug 1278412 Opened 9 years ago Closed 9 years ago

3,900 instances of "NS_ENSURE_TRUE(editor) failed" emitted from editor/libeditor/nsEditorCommands.cpp during linux64 debug testing

Categories

(Core :: DOM: Editor, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla50
Tracking Status
firefox50 --- fixed

People

(Reporter: erahm, Assigned: nika)

References

(Blocks 1 open bug)

Details

(Keywords: regression)

Attachments

(1 file)

> 3874 WARNING: NS_ENSURE_TRUE(editor) failed: file editor/libeditor/nsEditorCommands.cpp, line 584 This warning [1] shows up in the following test suites: > 3612 - [TC] Linux64 web-platform-tests-e10s-5 5 > 119 - [TC] Linux64 mochitest-browser-chrome-e10s-3 bc3 > 49 - [TC] Linux64 mochitest-browser-chrome-e10s-1 bc1 > 28 - [TC] Linux64 firefox-ui-tests functional e10s en-US > 21 - [TC] Linux64 mochitest-browser-chrome-e10s-4 bc4 > 14 - [TC] Linux64 mochitest-2 2 > 7 - [TC] Linux64 mochitest-browser-chrome-e10s-5 bc5 > 7 - [TC] Linux64 mochitest-plain-e10s-10 10 > 7 - [TC] Linux64 mochitest-plain-e10s-3 3 > 7 - [TC] Linux64 mochitest-3 3 > 2 - [TC] Linux64 mochitest-clipboard cl > 1 - [TC] Linux64 mochitest-chrome-3 c3 It shows up in 20 tests. A few of the most prevalent: > 3570 - [e10s] /html/semantics/forms/textfieldselection/selection.html > 105 - [e10s] dom/tests/browser/browser_focus_steal_from_chrome.js > 35 - [e10s] /html/semantics/forms/textfieldselection/select-event.html > 35 - [e10s] browser/base/content/test/urlbar/browser_bug1025195_switchToTabHavingURI_aOpenParams.js > 21 - [e10s] test_safe_browsing_notification.py TestSafeBrowsingNotificationBar.test_notification_bar > 14 - [e10s] browser/components/newtab/tests/browser/browser_newtab_overrides.js > 14 - dom/browser-element/mochitest/test_browserElement_oop_SetInputMethodActive.html > 7 - [e10s] browser/components/contextualidentity/test/browser/browser_aboutURLs.js > 7 - [e10s] dom/tests/browser/browser_autofocus_background.js > 7 - [e10s] /html/semantics/interactive-elements/the-dialog-element/dialog-showModal.html [1] https://hg.mozilla.org/mozilla-central/annotate/0a3b6e2df656/editor/libeditor/nsEditorCommands.cpp#l584
Flags: needinfo?(michael)
Keywords: regression
Firstly, I've looked at the changes for bug 1208217 again, and I'm not sure how it could have caused this increase in warning spam. I'm also not convinced that this warning is super legitimate as an actual failure case (it was changed from a if (!editor) return NS_OK; by a regular expression in bug 572618), and the warning itself should probably be removed. I'm going to check with ehsan to make sure that my assumptions are correct.
Flags: needinfo?(michael) → needinfo?(ehsan)
We should remove this warning. r+ on a patch that does that. :-)
Flags: needinfo?(ehsan)
Assignee: nobody → michael
Pushed by michael@thelayzells.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/b764ee0f465e Disable warning in nsDeleteCommand::IsCommandEnabled, r=ehsan
Alright I got my bisector working again, for posterity it looks like it was actually this push that regressed: https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=83e8b01535bf1b574338859b8e26e2f1a86030e0&tochange=ea96f5a5d0b523b19627b1b98e25a28e956890dc Appears to be updating tests.
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla50
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: