Bug 1278412 - Disable warning in nsDeleteCommand::IsCommandEnabled, r=ehsan